# oxide-train

./: .gitignore  Cargo.toml  README.md  SPEC.md  modal_app.py  run.sh  rust-toolchain.toml
crates/data/: Cargo.toml
crates/data/examples/: decode_ids.rs
crates/data/src/: batch.rs  lib.rs  shard.rs  tokenizer.rs
crates/nn/: Cargo.toml
crates/nn/src/: attention.rs  cross_entropy.rs  dense.rs  embedding.rs  gradcheck.rs  lib.rs  linear.rs  llama.rs  module.rs  moe.rs  moe_dense.rs  moe_llama.rs  rms_norm.rs  rope.rs  swiglu.rs
crates/nn/tests/: attention.rs  cpu_model.rs  dense_modules.rs  gradcheck.rs  moe.rs
crates/optim/: Cargo.toml
crates/optim/examples/: aligned_probe.rs  overfit_probe.rs
crates/optim/src/: lib.rs  muon.rs
crates/tensor-core/: Cargo.toml
crates/tensor-core/src/: element.rs  lib.rs  rng.rs  shape.rs
crates/tensor-cpu/: Cargo.toml
crates/tensor-cpu/src/: lib.rs  ops.rs
gpu/bench-util/: Cargo.toml
gpu/bench-util/src/: lib.rs
gpu/flash-attn/: Cargo.toml
gpu/flash-attn/src/: host.rs  lib.rs  main.rs  tcgen05.rs
gpu/gemm/: Cargo.toml
gpu/gemm/src/: fp32.rs  host.rs  lib.rs  main.rs  optimized.rs
gpu/llama-model/: Cargo.toml
gpu/llama-model/src/: checkpoint.rs  lib.rs  main.rs
gpu/llama-ops/: Cargo.toml
gpu/llama-ops/src/: lib.rs  main.rs
gpu/model/: Cargo.toml
gpu/model/src/: checkpoint.rs  lib.rs  main.rs
gpu/ops/: Cargo.toml
gpu/ops/src/: lib.rs  main.rs
gpu/tensor-gpu/: Cargo.toml
gpu/tensor-gpu/src/: lib.rs  main.rs
gpu/vecadd/: Cargo.toml
gpu/vecadd/src/: lib.rs  main.rs
