[package]
name = "data"
version.workspace = true
edition.workspace = true

[features]
default = ["offline"]
offline = ["dep:hf-hub", "dep:parquet", "dep:rayon", "dep:tiktoken-rs"]

[dependencies]
anyhow = "1.0.103"
hf-hub = { version = "0.4", default-features = false, features = ["default-tls", "ureq"], optional = true }
memmap2 = "0.9.11"
parquet = { version = "59.1.0", optional = true }
rayon = { version = "1.12.0", optional = true }
tensor-core.workspace = true
tensor-cpu.workspace = true
tiktoken-rs = { version = "0.12.0", optional = true }

[[bin]]
name = "prepare_wiki"
required-features = ["offline"]
