[package]
name = "bench-util"
version = "0.1.0"
edition = "2024"

# Standalone crate: not part of the root (CPU) workspace.
[workspace]

[dependencies]
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2409204733c55b81435abf1db4e5fda8309edead" }
# Same RNG as the CPU reference tensors, so parity tests reproduce identical
# inputs on both sides from a seed.
tensor-core = { path = "../../crates/tensor-core" }
