[package]
name = "flash-attn"
version = "0.1.0"
edition = "2024"
default-run = "flash-attn"

[workspace]

[dependencies]
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2409204733c55b81435abf1db4e5fda8309edead" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2409204733c55b81435abf1db4e5fda8309edead" }
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2409204733c55b81435abf1db4e5fda8309edead" }
bench-util = { path = "../bench-util" }

[profile.release]
debug = false
lto = true
