[package]
name = "tensor-gpu"
version = "0.1.0"
edition = "2024"
default-run = "tensor-gpu"

# GPU crates are built independently by `cargo oxide`, outside the CPU
# workspace.
[workspace]

[dependencies]
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2409204733c55b81435abf1db4e5fda8309edead" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2409204733c55b81435abf1db4e5fda8309edead" }
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2409204733c55b81435abf1db4e5fda8309edead" }
tensor-core = { path = "../../crates/tensor-core" }
tensor-cpu = { path = "../../crates/tensor-cpu" }
bench-util = { path = "../bench-util" }

[profile.release]
debug = false
lto = true
